# sudoku-python

./: .gitignore  LICENSE  Makefile  README.md  boards.txt  pyproject.toml  requirements.txt  setup.cfg  sudoku.py  test_sudoku.py
.github/workflows/: main.yaml  merge.yaml
src/dlx/: cover.py  models.py  search.py  solve.py  uncover.py
src/sudoku/: board.py  cli.py  models.py
src/sudoku/solve/: __init__.py  backtrack.py  dlx.py
src/sudoku/solve/dlx/: __init__.py  models.py  solve.py
src/yass/: cli.py  models.py
src/yass/dlx/: cover.py  examples.py  models.py  search.py  uncover.py
src/yass/solve/: __init__.py  backtrack.py  dlx.py
tests/: conftest.py  test_board.py  test_box.py  test_cell.py  test_dlx.py  test_solve.py  test_sudoku.py
