[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules -m \"not very_unit\""
markers = [
    "very_unit"
]

[tool.coverage.run]
parallel = true
source = ["sudoku", "dlx"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
    "src/sudoku/cli.py",
]
exclude_lines = [
    "pragma: no cover",
    "class .*\\bProtocol\\):"
]