[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yass"
description = "Yet another sudoku solver"
version = 0.3
author = "Sam Thorold"
author_email = "sam.thorold@gmail.com"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "tox",
    "black",
    "mkdocstrings[python-legacy]",
    "mkdocstrings-material",
    "mypy",
]


[tool.pytest.ini_options]
addopts = "--doctest-modules -m \"not very_unit\""
markers = [
    "very_unit"
]

[tool.coverage.run]
parallel = true
source = ["sudoku", "dlx"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
    "src/sudoku/cli.py",
]
exclude_lines = [
    "pragma: no cover",
    "class .*\\bProtocol\\):"
]
