[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yasspy"
description = "Yet another sudoku solver"
readme = "README.md"
version = "0.3.2"
authors = [
    {name = "Sam Thorold"},
    {email = "sam.thorold@gmail.com"}
]
maintainers = [
    {name = "Sam Thorold"},
    {email = "sam.thorold@gmail.com"}
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
repository = "https://github.com/samthorold/sudoku-python"

[project.scripts]
yass-cli = "yass.cli:cli"

[project.optional-dependencies]
dev = [
    "build",
    "pytest-cov",
    "tox",
    "black",
    "mypy",
    "snakeviz",
    "twine",
]


[tool.pytest.ini_options]
addopts = "--doctest-modules -m \"not very_unit\""
markers = [
    "very_unit"
]
pythonpath = [
    "src"
]

[tool.coverage.run]
parallel = true
source = ["yass"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
    "src/yass/cli.py",
]
exclude_lines = [
    "pragma: no cover",
    "class .*\\bProtocol\\):"
]
