[metadata]
name = sudoku
version = 0.2
author = Sam Thorold
author_email = sam.thorold@gmail.com

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest-cov
    tox
dev =
    pytest-cov
    tox
    black
    mkdocstrings[python-legacy]
    mkdocs-material
    mypy
